--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,4 +25,28 @@ jobs:
     
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
-
+    
+    - name: Cache pip
+      uses: actions/cache@v2
+      with: 
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          ${{ runner.os }}-
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Test with pytest
+      run: |
+        pytest tests --cov=src --cov-report=html
+        
+    - name: Upload pytest test results
+      uses: actions/upload-artifact@v1
+      with:
+        name: pytest-results-${{ matrix.python-version }}
+        path: htmlcov
+      if: ${{ always() }}
