--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: CI
 # Triggers the workflow on push or pull request
 # events but only for the develop branch
 on:
-  push:
-    branches: [ develop ]
+#   push:
+#     branches: [ develop ]
   pull_request:
     branches: [ develop ]
 
