--- a/.github/workflows/make_deliverable.yaml
+++ b/.github/workflows/make_deliverable.yaml
@@ -42,5 +42,5 @@ jobs:
         upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: src/redshirt/dist/something.exe
         asset_name: something-windows.exe
-#         asset_content_type: application/zip
+        asset_content_type: application/x-msdownload
         
