--- a/.github/workflows/make_deliverable.yaml
+++ b/.github/workflows/make_deliverable.yaml
@@ -1,7 +1,9 @@
 name: Make the deliverable
 
 on:
-  release
+  release:
+    types: [created]
+    
 
 
 jobs:
@@ -32,7 +34,7 @@ jobs:
     - name: Build with pyinstaller
       run: |
         cd src/redshirt
-        pyinstaller --onefile --noconsole something.py
+        pyinstaller --onefile something.py
         
     - name: Upload Release artifact
       uses: actions/upload-release-asset@v1
