--- a/.github/workflows/make_deliverable.yaml
+++ b/.github/workflows/make_deliverable.yaml
@@ -11,38 +11,42 @@ jobs:
     runs-on: windows-latest
     
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
-    
-    - name: Get the release
-      id: get_release
-      uses: bruceadams/get-release@v1.2.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-        
-    - name: Install dependencies
+    - name: Check release type
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pyinstaller
+        echo event: ${{ github.event }}
+          
+#     - name: Checkout source code
+#       uses: actions/checkout@v2
+    
+#     - name: Get the release
+#       id: get_release
+#       uses: bruceadams/get-release@v1.2.0
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.8
         
-    - name: Build with pyinstaller
-      run: |
-        cd src/redshirt
-        pyinstaller --onefile something.py
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install -r requirements.txt
+#         pip install pyinstaller
         
-    - name: Upload Release artifact
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
-      with:
-        upload_url: ${{ steps.get_release.outputs.upload_url }}
-        asset_path: src/redshirt/dist/something.exe
-        asset_name: something-windows.exe
-        asset_content_type: application/x-msdownload
+#     - name: Build with pyinstaller
+#       run: |
+#         cd src/redshirt
+#         pyinstaller --onefile something.py
+        
+#     - name: Upload Release artifact
+#       uses: actions/upload-release-asset@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
+#       with:
+#         upload_url: ${{ steps.get_release.outputs.upload_url }}
+#         asset_path: src/redshirt/dist/something.exe
+#         asset_name: something-windows.exe
+#         asset_content_type: application/x-msdownload
         
