--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,11 +3,13 @@ name: Make a release
 on:
   release:
     types: [published, created, edited]
+  push:
+    branches: [develop]
     
 
 jobs:
   blue:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
     - name: Upload blue artifact
       uses: actions/upload-artifact@v1
@@ -16,7 +18,7 @@ jobs:
         path: blue_artifact
         
   red:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
     - name: Upload red artifact
       uses: actions/upload-artifact@v1
