--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: show tag
-        run: echo current ref, ${{ github.ref }}
+        run: |
+          echo current ref, ${{ github.ref }}
+          echo event: ${{ github.event }}
 
       - name: Upload blue artifact
         uses: actions/upload-artifact@v1
