--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
           tag=${{ github.ref }}
           marker=${tag##*-}
           echo $marker
-          if [[ $marker -eq "red ]]
+          if [[ $marker -eq "red" ]]
           then
             echo "::set-output name=build::red"
           elif [[ $marker -eq "blue" ]]
