--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -60,9 +60,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.assets_url }} 
-          asset_name: red
-          asset_path: red_artifact        
-          asset_content_type: application/zip
+          asset_name: red_artifact
+          asset_path: ./red_artifact        
+          asset_content_type: application/text
           
   blue:
     needs: decision    
