--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,15 +54,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: zip it
+        run: zip red_artifact
       - name: Upload red artifact
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_name: red_artifact
-          asset_path: ./red_artifact        
-          asset_content_type: application/text
+          asset_name: red_artifact.zip
+          asset_path: ./red_artifact.zip        
+          asset_content_type: application/zip
           
   blue:
     needs: decision    
